--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,6 +28,7 @@ workflows:
             -sdk iphoneos \
             -configuration Release \
             -archivePath build/RatoNet.xcarchive \
+            -skipPackagePluginValidation \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
