--- a/exportOptions.plist
+++ b/exportOptions.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>method</key>
-    <string>development</string>
+    <string>ad-hoc</string>
     <key>teamID</key>
     <string></string>
     <key>signingStyle</key>
@@ -14,6 +14,8 @@
     <false/>
     <key>uploadBitcode</key>
     <false/>
+    <key>stripSwiftSymbols</key>
+    <true/>
 </dict>
 </plist>
 
